# Agentic-Financial-Operations-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.example.md  docker-compose.yml  pyproject.toml
ai/: llm.py  rag.py
alembic/: env.py
alembic/versions/: 0001_initial_platform.py
app/: __init__.py  api.py  main.py
app/core/: auth.py  config.py
app/db/: models.py  session.py
app/models/: case.py
app/services/: approvals.py  audit.py  llm.py  rag.py  repository.py
app/workflows/: investigation.py
config/: settings.py  urls.py
investigations/: admin.py  models.py  serializers.py  urls.py  views.py
investigations/migrations/: 0001_initial.py
tests/: test_cases.py
workflows/: investigation.py
