[project]
name = "agentic-finops-intelligence"
version = "0.2.0"
description = "Django REST agentic financial operations intelligence platform."
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.0",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "django-filter>=24.3",
    "dj-database-url>=2.2.0",
    "psycopg[binary]>=3.1.19",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-django>=4.8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "investigations*", "ai*", "workflows*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
